# logwrap

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CI_REQUIREMENTS.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  appveyor.yml  azure-pipelines.yml  build_requirements.txt  circle.yml  classifiers.txt  flake8_requirements.txt  mypy_requirements.txt  pyproject.toml  pytest.ini  pytest_requirements.txt  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.azure_pipelines/: run_tests.yml
.github/workflows/: codeql.yml  pythonpackage.yml
doc/: Makefile  make.bat
doc/source/: LogOnAccess.rst  PrettyFormat.rst  conf.py  getstart.rst  index.rst  logwrap.rst
docs/: index.md
logwrap/: __init__.pxd  __init__.py  __init__.pyx  _alogwrap.py  _class_decorator.py  _class_decorator.pyi  _formatters.py  _func_helpers.py  _log_wrap.py  _log_wrap2.py  _log_wrap2.pyi  _log_wrap3.py  _log_wrap3.pyi  _log_wrap_shared.py  _log_wrap_shared.pyi  _repr_utils.py  _repr_utils.pyi  class_decorator.pxd  class_decorator.py  class_decorator.pyx  constants.py  func_helpers.py  log_on_access.py  log_wrap.pxd  log_wrap.py  log_wrap.pyx  repr_utils.pxd  repr_utils.py  repr_utils.pyx
test/: pyproject.toml  test_func_helpers.py  test_log_on_access.py  test_log_on_access_mod_log.py  test_log_wrap.py  test_log_wrap_logger.py  test_log_wrap_py3.py  test_log_wrap_py35.py  test_log_wrap_shared.py  test_pretty_str.py  test_repr_utils.py  test_repr_utils_special.py
tools/: build-wheels.sh  run_docker.sh  run_docker_manylinux2014.sh
